tests/pass/16_char_literals.lang
функция main(): целое {
  пост символ a = 'A';
  символ b = '\''; 
  символ c = '\\';
  символ n = '\n';
  символ rus = 'Я';
  символ rocket = '🚀';
  вернуть 0;
}
