tests/fail/20_char_unclosed.lang
// ОЖИДАЕТСЯ ОШИБКА: ожидалось выражение
функция Начало(): целое {
  символ unclosed = 'a;
  вернуть 0;
}
